crates/parse/src/tests/snapshots/func_def_bad_1.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- "fn a(b: int) - { b }"
- Err:
    - message: "Expecting `{` to start block. Got `-`"
      line: 1
      column: 14
- "Expecting `{` to start block. Got `-` at 1:14"

