crates/parse/src/tests/snapshots/func_def_bad_10.snap
---
source: crates/parse/src/tests.rs
assertion_line: 163
expression: "(test[1], ast, ast_string)"
---
- "fn a(a: int"
- Err:
    message: "Expecting `,` or `)` in prototype. Got `EOF`"
    line: 1
    column: 10
- "Expecting `,` or `)` in prototype. Got `EOF` at 1:10"

