crates/parse/src/tests/snapshots/func_def_bad_2.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- "fn a(b: int) -> { b }"
- Err:
    - message: "Expecting prototype type annotation. Got `OpenBrace`"
      line: 1
      column: 17
- "Expecting prototype type annotation. Got `OpenBrace` at 1:17"

