crates/parse/src/tests/snapshots/func_def_bad_4.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- fn a
- Err:
    - message: "Expecting `(` in prototype. Got `EOF`"
      line: 0
      column: 0
- "Expecting `(` in prototype. Got `EOF`"

