crates/parse/src/tests/snapshots/func_def_bad_6.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- "fn a(a: int, {}"
- Err:
    - message: "Expecting identifier or `)` in `prototype` typed declaration. Got `OpenBrace`"
      line: 1
      column: 14
- "Expecting identifier or `)` in `prototype` typed declaration. Got `OpenBrace` at 1:14"

