crates/parse/src/tests/snapshots/func_def_bad_8.snap
---
source: crates/parse/src/tests.rs
assertion_line: 163
expression: "(test[1], ast, ast_string)"
---
- fn a(
- Err:
    message: "Expecting `{` to start block. Got `EOF`"
    line: 0
    column: 0
- "Expecting `{` to start block. Got `EOF`"

